fixed product detail cropped image when responsive

--- a/styles/pages/product-details.css
+++ b/styles/pages/product-details.css
@@ -427,7 +427,6 @@
   }
 
   .product-image {
-    width: 100%;
     max-width: 340px;
     min-width: unset;
     margin: 0 auto;
